Fix for navbar shifting.

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@ ul {
     padding: 0px;
     gap: 20px;
     font-size: 22px;
-    border: 1px solid transparent;
-    border-radius: 2px 2px 0 0;
 }
 
 a {
@@ -20,6 +18,13 @@ a {
 }
 
 a:hover {
+    font-weight: 700;
+}
+
+a::before {
+    overflow: hidden;
+    visibility: hidden;
+    height: 0;
     font-weight: 700;
 }
 
